@@ -35,6 +35,7 @@ v0.35.04	29-Sep-2002
 		outbound directory instead of the point outbound.
 		Files and echomail security flags implemented.
 		Echomail rescan will also work with newsgroups.
+		Removed some debug logging with files replace.
 
 	mbsetup:
 		Added setup for the nodes record for security flags.
@@ -43,6 +44,9 @@ v0.35.04	29-Sep-2002
 		Added setup for the tic areas security flags.
 		Added setup for the message areas security flags.
 		Menu 14, edit files database had the wrong selection prompt.
+
+	mbindex:
+		Removed debug logging.
 
 
 v0.35.03	06-Jul-2002 - 29-Sep-2002
